<resources>
    <string name="app_name">Apna Bazaar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Profile">Profile</string>
    <string name="Order_History">Order History</string>
    <string name="Bid_History">Bid History</string>
    <string name="Winner_List">Winner List</string>
    <string name="Sell_your_Product">Sell your Product</string>
    <string name="Feedback">Feedback</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="About_Us">About Us</string>
    <string name="Account">Account</string>
    <string name="Change_Password">Change Password</string>
    <string name="Change_Language">Change Language</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="Logout">Logout</string>


    <string-array name="duration">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="mins">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
    <string-array name="category_of_item">
        <item>Industrial</item>
        <item>Electronics</item>
        <item>Artistic</item>
        <item>Perishable</item>
        <item>Textile</item>
    </string-array>

    <string-array name="category_search">
        <item>All</item>
        <item>Industrial</item>
        <item>Electronics</item>
        <item>Artistic</item>
        <item>Perishable</item>
        <item>Textile</item>
    </string-array>

    <string-array name="city_of_item">

        <item>Belgaum</item>
        <item>Bangalore</item>
        <item>Goa</item>
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Chennai</item>
    </string-array>

    <string-array name="search_of_city">
        <item>All</item>
        <item>Belgaum</item>
        <item>Bangalore</item>
        <item>Goa</item>
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Chennai</item>
    </string-array>

    <string-array name="type">
        <item>Seller</item>
        <item>Buyer</item>
        <item>Both</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
